[build-system]
#requires = ["hatchling"]
#build-backend = "hatchling.build"
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "pyoceanstor_upc"
version = "0.1"
authors = [
  { name="Guillermo Miranda", email="guillermo.miranda@upc.edu" },
  { name="Toni Comerma" }
]
description = "A limited OceanStor Dorado API implementation"
readme = "README.md"
requires-python = ">=3.4"
license = {file = "LICENSE.md", content-type = "text/markdown"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Lesser General Public License v3.0 or later (LGPLv3.0+)",
    "Operating System :: OS Independent",
]

dependencies = [
    "PyYAML>=5.1.0",
    "humanfriendly>=6.0"
]

[project.urls]
Homepage = "https://github.com/UPC/PyOceanStor"
Issues = "https://github.com/UPC/PyOceanStor/issues"
